# pjecz-plataforma-web-api-oauth2

./: .gcloudignore  .gitignore  README.md  app.yaml  arrancar.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gcloud-app-deploy.yml
cli/: README.md  app.py  cli.py
cli/commands/: autentificar.py  (+6 more)
config/: settings.py
instance/: settings.py
lib/: database.py  exceptions.py  fastapi_pagination.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  fastapi_pagination_datatable.py  pwgen.py  safe_string.py  schemas_base.py  universal_mixin.py
notebooks/: README.md  departamentos.ipynb  distritos.ipynb  inventarios_sqlalchemy.ipynb  listas_de_acuerdos.ipynb  plataforma_web  sentencias.ipynb  sentencias_api_00.ipynb  soportes_tickes.ipynb  soportes_tickets.ipynb  soportes_tickets_api.ipynb  soportes_tickets_sqlalchemy.ipynb  usuarios.ipynb
plataforma_web/: app.py
plataforma_web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rest-api/: justicia.rest
rest-client/: README.md  abogados.rest  catalogos.rest  hola-mundo.rest  inventarios.rest  redams.rest  repsvm.rest  sentencias.http  soportes-tickets.rest  soportes.http  soportes.rest  tests.http  tests.rest  usuarios.rest  zz_abogados.rest  zz_hola-mundo.rest  zz_sentencias.http  zz_soportes.http
sql/: README.md  autoridades.session.sql  edictos.session.sql  listas_de_acuerdos.session.sql  sentencias.session.sql
tests/: authenticate.py  authentification.py  creado.py  inventarios.py  pwgen.py  sentencias.py  soportes_tickets.py
(+256 files in other folders)
