[tool.poetry]
name = "pjecz-plataforma-web-api-oauth2"
version = "1.0"
description = "API OAuth2 de Plataforma Web para brindar datos a otros sistemas"
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"
SQLAlchemy-Utils = "^0.38.3"
hashids = "^1.3.1"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.9.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
gunicorn = "^20.1.0"
requests = "^2.28.1"
typer = "^0.6.1"
rich = "^12.5.1"
Unidecode = "^1.3.4"
python-multipart = "^0.0.5"
uvicorn = "^0.18.2"
rq = "^1.11.0"
python-dotenv = "^0.20.0"
tabulate = "^0.8.10"
pandas = "^1.4.3"
sendgrid = "^6.9.7"
pytz = "^2022.2.1"
google-auth = "^2.15.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.12.6"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pylint-sqlalchemy = "^0.2.0"
black = "^22.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256
